# rs-honeypot-detector

./: Cargo.toml  README.md
src/: cli.rs  erc20.rs  error.rs  main.rs  revm_actions.rs  test_swap.rs  uniswapv2.rs  uniswapv3.rs
