[package]
name = "honeypot-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.5.4", features = ["full"] }
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive", "env"] }
revm = { version = "17.1.0", features = ["alloydb"] }
serde = "1.0.213"
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full", "rt-multi-thread"] }
